<resources>
    <string name="app_name">barsux_experimental</string>
    <string name="drivenext">DriveNext</string>
    <string name="description">Поможем найти твою следующую поездку</string>
    <string name="welcome_illustration">Welcome illustration</string>
    <string name="enter">Войти</string>
    <string name="signup">Зарегистрироваться</string>
    <string name="noconnection_icon">Нет подключения</string>
    <string name="noconnection">Нет подключения\nк интернету</string>
    <string name="noconnection_desc">Проверьте подключение и повторите попытку</string>
    <string name="retry">Повторить попытку</string>
    <string name="skip">Пропустить</string>
    <string name="input_label_email">Электронная почта</string>
    <string name="input_label_email_hint">Введите электронную почту</string>
    <string name="input_label_password1">Придумайте пароль</string>
    <string name="input_label_password_hint">Введите пароль</string>
    <string name="input_label_password2">Повторите пароль</string>
    <string name="consent_checkbox">Я согласен с условиями обслуживания и политикой конфиденциальности</string>
    <string name="next">Далее</string>
    <string name="back">Назад</string>
    <string name="sign_up_title">Создать аккаунт</string>
    <string name="choose_date">Выберите дату</string>
    <string name="avatar">Аватар</string>
    <string name="add_photo">Добавить фото</string>
    <string name="avatar_description">Описание аватара</string>
    <string name="upload_photo">Загрузить фото</string>
    <string name="avatar_decription">Добавление фотографии поможет владельцам и арендаторам узнать друг друга, когда они будут забирать машину</string>
    <string name="driver_id">Номер водительского удостоверения</string>
    <string name="driver_id_example">0000000000</string>
    <string name="date_of_issue">Дата выдачи</string>
    <string name="ddmmyyyy">ДД/ММ/ГГГГ</string>
    <string name="upload_driver_id">Загрузите фото ВУ</string>
    <string name="upload_driver_id_desc">Upload License</string>
    <string name="upload_id">Загрузите фото паспорта</string>
    <string name="upload_id_hint">Upload Passport</string>
    <string name="success">СУККЕС</string>
    <string name="gratz">Поздравляем</string>
    <string name="enjoy">Пользуйтесь с удовольствием</string>
    <string name="go_sleep">Вы успешно зарегистрировались.\nОбработка ваших персональных данных\nзаймёт около двух часов. Спасибо за\nожидание.</string>
    <string name="signin">Войдите в аккаунт</string>
    <string name="please_enter">Пожалуйста, введите свои данные</string>
    <string name="email">Электронная почта</string>
    <string name="password">Пароль</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="google">Google</string>
    <string name="enter_via_google">Войти через Google</string>
    <string name="do_consent">Подтвердите согласие</string>
    <string name="get_sex">Выберите пол</string>
    <string name="male">Мужской</string>
    <string name="female">Женский</string>
    <string name="sex">Пол</string>
    <string name="birth_date">Дата рождения</string>
    <string name="enter_middlename">Введите отчество</string>
    <string name="middlename">Отчество</string>
    <string name="enter_first_name">Введите имя</string>
    <string name="first_name">Имя</string>
    <string name="enter_last_name">Введите фамилию</string>
    <string name="last_name">Фамилия</string>
    <string name="default_web_client_id">963547212328-rf0cuidab418pmd7ar2pdgf7tvtmk32k.apps.googleusercontent.com</string>
</resources>