<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/signInRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true">

    <!-- Заголовок -->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_bold"
        android:layout_marginTop="120dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Подзаголовок -->
    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_enter"
        android:textSize="14sp"
        android:textColor="@color/gray_700"
        android:fontFamily="@font/montserrat_medium"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Label: Email -->
    <TextView
        android:id="@+id/emailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="14sp"
        android:textColor="@color/gray_700"
        android:fontFamily="@font/montserrat_medium"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/subtitle"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Email -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayout"
        style="@style/CustomTextInputStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/input_label_email_hint"
        app:boxBackgroundMode="outline"
        app:layout_constraintTop_toBottomOf="@id/emailLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/appPurple"
            android:textColorHint="@color/gray_700"
            android:backgroundTint="@android:color/transparent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Label: Password -->
    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="14sp"
        android:textColor="@color/gray_700"
        android:fontFamily="@font/montserrat_medium"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/emailInputLayout"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Password -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        style="@style/CustomTextInputStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/input_label_password_hint"
        app:endIconMode="password_toggle"
        app:boxBackgroundMode="outline"
        app:layout_constraintTop_toBottomOf="@id/passwordLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/appPurple"
            android:textColorHint="@color/gray_700"
            android:backgroundTint="@android:color/transparent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Forgot password -->
    <TextView
        android:id="@+id/forgotPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textSize="14sp"
        android:textColor="@color/appPurple"
        android:fontFamily="@font/montserrat_medium"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/passwordInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Кнопка Войти -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/signInButton"
        style="@style/PurpleButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/enter"
        android:layout_marginTop="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toBottomOf="@id/forgotPasswordText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Кнопка Войти через Google -->
    <LinearLayout
        android:id="@+id/googleButtonLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:backgroundTint="@android:color/white"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:paddingVertical="12dp"
        android:paddingHorizontal="16dp"
        android:background="@drawable/rounded_border_gray"
        android:elevation="2dp"
        app:layout_constraintTop_toBottomOf="@id/signInButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/google"
            android:contentDescription="@string/google" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_via_google"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:fontFamily="@font/montserrat_medium"
            android:layout_marginStart="12dp" />
    </LinearLayout>

    <!-- Зарегистрироваться -->
    <TextView
        android:id="@+id/signUpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textSize="14sp"
        android:textColor="@color/appPurple"
        android:fontFamily="@font/montserrat_medium"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@id/googleButtonLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
