<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true">

    <!-- Заголовок -->
    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enjoy"
        android:textColor="@color/appPurple"
        android:textSize="20sp"
        android:fontFamily="@font/montserrat_bold"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Иконка успеха -->
    <ImageView
        android:id="@+id/successIcon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="140dp"
        android:src="@drawable/check"
        android:contentDescription="@string/success"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <!-- Подзаголовок -->
    <TextView
        android:id="@+id/congratsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gratz"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/montserrat_bold"
        app:layout_constraintTop_toBottomOf="@id/successIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Описание -->
    <TextView
        android:id="@+id/readPLS"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/go_sleep"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:lineSpacingExtra="4dp"
        android:fontFamily="@font/montserrat_medium"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/congratsTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Кнопка Далее -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/nextButton"
        style="@style/PurpleButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
