<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true">

    <!-- Кнопка Назад -->
    <ImageView
        android:id="@+id/backButton"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="38dp"
        android:contentDescription="@string/back"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Заголовок по центру -->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/sign_up_title"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Email label -->
    <TextView
        android:id="@+id/emailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/input_label_email"
        android:textColor="@color/gray_700"
        android:fontFamily="@font/montserrat_medium"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <!-- Email -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayout"
        style="@style/CustomTextInputStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/input_label_email_hint"
        android:textColorHint="@color/gray_300"
        app:boxBackgroundMode="outline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailLabel">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:inputType="textEmailAddress"
            android:textColor="@color/appPurple"
            android:textColorHint="@color/gray_700" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Password label -->
    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/input_label_password1"
        android:textColor="@color/gray_700"
        android:fontFamily="@font/montserrat_medium"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailInputLayout" />

    <!-- Пароль -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        style="@style/CustomTextInputStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/input_label_password_hint"
        android:textColorHint="@color/gray_300"
        app:boxBackgroundMode="outline"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordLabel"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:inputType="textPassword"
            android:textColor="@color/appPurple"
            android:textColorHint="@color/gray_700" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Confirm password label -->
    <TextView
        android:id="@+id/confirmPasswordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/input_label_password2"
        android:textColor="@color/gray_700"
        android:fontFamily="@font/montserrat_medium"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordInputLayout" />

    <!-- Повторите пароль -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmPasswordInputLayout"
        style="@style/CustomTextInputStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/input_label_password_hint"
        android:textColorHint="@color/gray_300"
        app:boxBackgroundMode="outline"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirmPasswordLabel">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:inputType="textPassword"
            android:textColor="@color/appPurple"
            android:textColorHint="@color/gray_700" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Чекбокс -->
    <CheckBox
        android:id="@+id/termsCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="34dp"
        android:text="@string/consent_checkbox"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirmPasswordInputLayout" />
    <TextView
        android:id="@+id/termsErrorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/do_consent"
        android:textColor="@color/error"
        android:textSize="12sp"
        android:fontFamily="@font/montserrat_medium"
        android:visibility="gone"
        android:layout_marginStart="40dp"
        app:layout_constraintTop_toBottomOf="@id/termsCheckBox"
        app:layout_constraintStart_toStartOf="parent" />
    <!-- Кнопка -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/nextButton"
        style="@style/PurpleButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
